restyled navbar, headers and footers

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 </head>
 
 <body>
+    <nav>
+        <ul class="nav-list">
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Prices</a></li>
+        </ul>
+    </nav>
     <header>
         <h1 class="heading">Extreme Travel</h1>
     </header>
-    <nav>
-        <ul class="nav-list">
-            <li>About</li>
-            <li>Contact</li>
-            <li>Prices</li>
-        </ul>
-    </nav>
     <main>
         <header>
             <h2>Extreme Packages!!!</h2>
