added a header element and styles in html

--- a/index.html
+++ b/index.html
@@ -12,16 +12,18 @@
 </head>
 
 <body>
-    <nav>
-        <ul class="nav-list">
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Prices</a></li>
-        </ul>
-    </nav>
-    <header>
-        <h1 class="heading">Extreme Travel</h1>
-    </header>
+    <section class="header">
+        <header class="title">
+            <h1 class="heading">Extreme Travel</h1>
+        </header>
+        <nav>
+            <ul class="nav-list">
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Prices</a></li>
+            </ul>
+        </nav>
+    </section>
     <main>
         <header>
             <h2>Extreme Packages!!!</h2>
