added contact.html and respective changes on css and js

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         </header>
         <nav>
             <ul class="nav-list">
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Prices</a></li>
+                <li><a href="index.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="#prices">Prices</a></li>
             </ul>
         </nav>
     </section>
@@ -55,7 +55,7 @@
             </section>
     </main>
     </section>
-    <section class="prices">
+    <section class="prices" id="prices">
         <section class="price">
             <p>$500/1 day</p>
         </section>
